--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<tr>
 								<th>Train Name</th>
 								<th>Destination</th>
-								<th>Frequency (min)</th>
+								<th>Trip Duration</th>
 								<th>Next Arrival</th>
 								<th>Minutes Away</th>
 							</tr>
