close to final product. still needs a little more styling

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h1 class="text-center">Train Scheduler</h1>
-			<h3 class="text-center">The Most <i class="fab fa-btc"></i><i class="fas fa-at"></i><i class="fab fa-dyalog"></i><i class="fas fa-at"></i><i class="fas fa-dollar-sign"></i><i class="fas fa-dollar-sign"></i> Train Scheduler</h3>
+			<h1 class="text-center">T<i class="fas fa-rupee-sign"></i>ÄN</h1>
+			<h3 class="text-center">The Most Badass Train Scheduler</h3>
 		</div>
 		<div class="row">
 			<div id="test" class="col-lg-12">
